[tool.poetry]
name = "hw14"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
redis = "^4.5.4"
sqlalchemy = "^2.0.10"
fastapi-limiter = "^0.1.5"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
libgravatar = "^1.0.4"
cloudinary = "^1.32.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
fastapi-mail = "^1.2.7"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
